--- a/app/src/main/res/layout/list_checkout_layout.xml
+++ b/app/src/main/res/layout/list_checkout_layout.xml
@@ -2,6 +2,11 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="totalPriceCheckout"
+            type="Double" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -14,7 +19,7 @@
             android:fontFamily="@font/open_sans_bold"
             android:paddingTop="20dp"
             android:paddingBottom="10dp"
-            android:text="CHECKOUT"
+            android:text="@string/checkout"
             android:textColor="@color/cyan"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -28,7 +33,7 @@
             android:layout_height="50dp"
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:strokeWidth="5px"
+            app:strokeWidth="1.5dp"
             app:strokeColor="@color/cyan"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/checkout">
@@ -37,25 +42,37 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20sp"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Total:"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="170sp"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:hint="Harga"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20sp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:text="@string/total"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/harga_total_checkout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="20sp"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/open_sans_regular"
+                        android:hint="Harga"
+                        android:text="@{String.format(`Rp. %.2f`, totalPriceCheckout)}"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
 
@@ -78,7 +95,7 @@
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:backgroundTint="@color/button_color"
             android:text="Confrim"
             app:cornerRadius="8dp"
