--- a/app/src/main/res/layout/list_product_layout.xml
+++ b/app/src/main/res/layout/list_product_layout.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:backgroundTint="@color/button_color"
-            android:text="Checkout"
+            android:text="@string/button_checkout"
             app:cornerRadius="8dp"
             app:strokeColor="@color/white"
             app:strokeWidth="1dp"
