--- a/app/src/main/res/layout/product_detail_layout.xml
+++ b/app/src/main/res/layout/product_detail_layout.xml
@@ -24,16 +24,15 @@
                 android:layout_height="140dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="75dp"
-                android:layout_marginRight="5dp"
                 android:src="@drawable/circle" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="80dp"
                 android:fontFamily="@font/open_sans_bold"
+                android:gravity="center_horizontal"
                 android:hint="Product Name"
                 android:text="@{vm.oneData.productName}"
                 android:textColor="@color/cyan"
@@ -52,10 +51,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="50dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="Price"
+                        android:text="@string/price"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
-                        android:layout_marginRight="50dp"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/open_sans_regular"
                         android:hint="Price"
                         android:text="@{String.format(`Rp. %.2f`, vm.oneData.price)}"
@@ -76,7 +75,6 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -89,10 +87,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="50dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="Dimension"
+                        android:text="@string/dimension"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -102,9 +100,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="20dp"
-                        android:layout_marginRight="50dp"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/open_sans_regular"
-                        android:hint="Dimensuin"
+                        android:hint="Dimension"
                         android:text="@{vm.oneData.dimension}"
                         android:textColor="@color/black"
                         android:textSize="18sp"
@@ -125,10 +123,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="50dp"
+                        android:layout_marginStart="50dp"
                         android:layout_marginTop="20dp"
                         android:fontFamily="@font/open_sans_regular"
-                        android:text="Price Unit"
+                        android:text="@string/price_unit"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -138,9 +136,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="25dp"
-                        android:layout_marginRight="50dp"
+                        android:layout_marginEnd="50dp"
                         android:fontFamily="@font/open_sans_regular"
-                        android:hint="Product Unit"
+                        android:hint="PCS"
                         android:text="@{vm.oneData.unit}"
                         android:textColor="@color/black"
                         android:textSize="18sp"
@@ -158,7 +156,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="50dp"
                 android:backgroundTint="@color/button_color"
-                android:text="Buy"
+                android:text="@string/buy"
                 app:cornerRadius="8dp"
                 app:strokeColor="@color/white"
                 app:strokeWidth="1dp" />
