--- a/app/src/main/res/layout/register_layout.xml
+++ b/app/src/main/res/layout/register_layout.xml
@@ -18,7 +18,7 @@
                 android:layout_marginTop="150dp"
                 android:layout_marginBottom="80dp"
                 android:fontFamily="@font/open_sans_bold"
-                android:text="@string/login"
+                android:text="@string/register"
                 android:textColor="@color/cyan"
                 android:textSize="36sp"
                 android:textStyle="bold" />
@@ -97,33 +97,37 @@
             </RelativeLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/login_button"
+                android:id="@+id/buat_akun_button"
                 android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="@color/button_color"
+                android:text="@string/buat_akun_button"
+                app:cornerRadius="8dp"
+                app:strokeColor="@color/white"
+                app:strokeWidth="1dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/open_sans_regular"
+                android:gravity="center"
+                android:text="@string/atau"
+                android:textColor="@color/hint_color" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/back_to_login"
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:backgroundTint="@color/button_color"
                 android:text="@string/login_button"
                 app:cornerRadius="8dp"
                 app:strokeColor="@color/white"
-                app:strokeWidth="1dp">
-
-            </com.google.android.material.button.MaterialButton>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/register_akun"
-                android:layout_width="wrap_content"
-                android:layout_height="40sp"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@font/open_sans_regular"
-                android:gravity="center"
-                android:outlineSpotShadowColor="@color/white"
-                android:text="@string/buat_akun"
-                android:textAllCaps="false"
-                android:textColor="@color/cyan"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-
+                app:strokeWidth="1dp" />
         </LinearLayout>
     </RelativeLayout>
 </layout>
